# budgr

./: .budgrrc  .gitignore  Cargo.toml  README.md  envrc  test.csv
backlog/: backlog.md  backlog.md.html  doc.md  intended-use.md  intended-use.md.html  rebuild-doc.sh
data/: db.csv  test.csv
doc/: help.html  settings.html
doc/main/: all.html  index.html
doc/src/main/: main.rs.html
src/: cli.rs  commands.rs  data.rs  eng.rs  format.sh  init.rs  lib.rs  list.rs  main.rs  obj.rs  op.rs
src/commands/: add_operation.rs  aggregate.rs  count_operations.rs  delete_operations.rs  filter_data.rs  import_file.rs  list_accounts.rs  list_operations.rs  mod.rs  modify_operations.rs  print_pretty.rs  print_raw.rs  print_version.rs  set_operation_status.rs  undelete_operations.rs  write_operation.rs
src/config/: mod.rs
src/data/: mod.rs  operation.rs  read_data.rs  status.rs
src/doc/src/main/: main.rs.html
src/eng/: err.rs  list.rs
tasks/: backlog.data  completed.data  pending.data  undo.data
testdata/: 20240101.000001.bgr  20240101.3019754034.bgr  20240102.000002.bgr  20240103.000003.bgr  20240104.000004.bgr  20240105.000005.bgr  data.tsv  db.csv
testimport/: data
tests/: breaking.rs  breaking_list.rs  integration_init.rs  integration_list.rs  util.rs
