[package]
name = "budgr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colorize = "0.1.0"
prettytable-rs = "0.10.0"
rand = "0.8.5"
time = { version = "0.3.31", features = ["formatting", "local-offset"] }
